--- a/反转链表.md
+++ b/反转链表.md
@@ -1,3 +1,39 @@
+
+### 操作步骤
+1. 初始化指针
+
+        head       second       third
+        |           |            |
+        |           |            |
+        1   ->      2 ->         3 -> 4
+
+
+2. 调换second的2指向head的1
+        由于有third持有3，不至于链表的后部分游离
+
+
+        head       second       third
+        |           |            |
+        |   <-      |            |
+        1   ->      2            3 -> 4
+
+3. 如果是第一个元素，把next置空并把head移到second的位置
+
+
+             head, second       third
+                    |            |
+                    |            |
+        1    <-     2            3 -> 4
+
+4. 移动second和third指针，回到第一步
+
+
+                  head         second       third
+                    |            |           |
+                    |            |           |   
+        1    <-     2            3 ->        4
+
+
 ```
 public class Node {
     public int val;
