--- a/反转链表.md
+++ b/反转链表.md
@@ -8,8 +8,7 @@
         1   ->      2 ->         3 -> 4
 
 
-2. 调换second的2指向head的1
-        由于有third持有3，不至于链表的后部分游离
+2. 调换second的2指向head的1，由于有third持有3，不至于链表的后部分游离
 
 
         head       second       third
